--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~6MATWKpa#XZiDJDGxXxcPIOl2AmBF4eziWWw9E_r_glay7d1qzV0"
 PREFIX=.
-OWNER_NUMBER=554488138425
+OWNER_NUMBER=8296826213
 SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
-AUTO_STATUS_SEEN=true
+OWNER_NAME=NAYO
+AUTO_STATUS_SEEN=false
 AUTO_BIO=true
-AUTO_STATUS_REACT=true
-AUTO_READ=false
-AUTO_RECORDING=false
-AUTO_REACT=false
+AUTO_STATUS_REACT=false
+AUTO_READ=true
+AUTO_RECORDING=true
+AUTO_REACT=treu
 STATUS_READ_MSG=Status Viewed by inconnu xd v2
 ANTILINK=false
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
-MODE=public
+MODE=false
 WELCOME=false
